force-app/main/default/objects/Main_Settings__mdt/Main_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Main Settings</label>
    <pluralLabel>Main Settings</pluralLabel>
</CustomObject>