force-app/main/default/objects/Main_Settings__mdt/fields/Days_before_card_expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_before_card_expiration__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Days before card expiration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>