force-app/main/default/objects/Main_Settings__mdt/fields/Default_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Account_Name__c</fullName>
    <defaultValue>&apos;Red Cross&apos;</defaultValue>
    <label>Default Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>