force-app/main/default/objects/Main_Settings__mdt/fields/Default_New_Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_New_Card_Status__c</fullName>
    <defaultValue>&apos;New&apos;</defaultValue>
    <label>Default New Card Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>