force-app/main/default/objects/Main_Settings__mdt/fields/Default_Opportunity_Donation_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Opportunity_Donation_Status__c</fullName>
    <defaultValue>&apos;Prospecting&apos;</defaultValue>
    <label>Default Opportunity Donation Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>