force-app/main/default/objects/Main_Settings__mdt/fields/Default_Opportunity_Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Opportunity_Membership_Status__c</fullName>
    <defaultValue>&apos;Membership&apos;</defaultValue>
    <label>Default Opportunity Membership Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>