force-app/main/default/objects/Main_Settings__mdt/fields/Default_Processed_Staging_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Processed_Staging_Status__c</fullName>
    <defaultValue>&apos;Processed&apos;</defaultValue>
    <label>Default Processed Staging Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>