force-app/main/default/objects/Main_Settings__mdt/fields/Recurring_Active_Donation_Status__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Active_Donation_Status__c</fullName>
    <defaultValue>&apos;Active&apos;</defaultValue>
    <label>Recurring Active Donation Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>