force-app/main/default/objects/Main_Settings__mdt/fields/Task_Subject_for_Reactivation_Card__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject_for_Reactivation_Card__c</fullName>
    <defaultValue>&apos;Card Reactivation&apos;</defaultValue>
    <label>Task Subject for Reactivation Card</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>