force-app/main/default/objects/Main_Settings__mdt/fields/Task_Subject_For_Recurring_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject_For_Recurring_Deactivation__c</fullName>
    <defaultValue>&apos;Recurring Deactivation&apos;</defaultValue>
    <label>Task Subject For Recurring Deactivation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>